# Asec_Mid_Project

./: .dockerignore  .gitignore  Dockerfile  Mid_drone.sh  docker-compose.yaml  manual_launch.txt  opencv.txt  setup_px4_gazebo_classic.sh
ros_ws/src/mission_pkg/: package.xml  setup.cfg  setup.py
ros_ws/src/mission_pkg/mission_pkg/: bev_line_analyzer.py  camera_subscriber.py  line_follow.py  line_state_node.py  mavros_keyboard_move.py
ros_ws/src/mission_sim/: CMakeLists.txt  README.md  package.xml
ros_ws/src/mission_sim/airframes/: 1099_gazebo-classic_iris_comp
ros_ws/src/mission_sim/launch/: sim.launch.py
ros_ws/src/mission_sim/models/iris_comp/: iris_comp.sdf  iris_comp_before_down_camera_20260517_044318.sdf  iris_comp_nested_include_backup.sdf  model.config
ros_ws/src/mission_sim/scripts/: install_to_px4.sh  uninstall_from_px4.sh
ros_ws/src/mission_sim/worlds/: competition.world
scripts/: run_competition_manual.sh  run_competition_manual.sh.before_1100
