<?xml version="1.0"?>
<package format="3">
  <name>mission_sim</name>
  <version>0.1.0</version>
  <description>Gazebo Classic world and iris model for the indoor grid competition.</description>
  <maintainer email="ytsong1019@konkuk.ac.kr">tak</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
